--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
   <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="app_info_logo">app_logo</string>
   <string name="search_title">Search</string>
-  <string name="text_installed">Installed</string>
   <string name="label_fragment_main">Main</string>
   <string name="text_apks">Disk APKs</string>
   <string name="label_application_detail_fragment">Details</string>
+  <string name="text_installed_user_apps">User Apps</string>
+  <string name="text_installed_system_apps">System Apps</string>
+  <string name="app_list_collapsed_chars">[ ]</string>
 </resources>
